[package]
name = "alloc-test"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"], optional = true }
derive_builder = "0.11.2"
derive_more = { version = "0.99.17", features = ["display"], default-features = false }
num = "0.4.0"
serde = { version = "1.0.146", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0.37"
toml = { version = "0.5.9", optional = true }

[features]
default = ["benchmark"]
benchmark = ["dep:clap", "dep:toml", "dep:serde_json"]
